// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizSubmissionList loads correctly when data is supplied 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              undefined,
            ]
          }
        >
          All Submissions
        </Text>
      </View>
      <View
        accessibilityLabel="Filter Submissions. (0) selected."
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 15,
            "left": 15,
            "right": 15,
            "top": 15,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 1,
            "opacity": 1,
            "width": "auto",
          }
        }
        testID="submission-list.filter"
      >
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Filter
          </Text>
        </View>
      </View>
    </View>
    <list>
      <item>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
            testID="submission-1"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel=""
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#F5F5F5",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "http://www.fillmurray.com/200/300",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Bill Murray
                </Text>
                <Text
                  accessibilityLabel="Submitted,"
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#127A1B",
                        },
                      ],
                    ]
                  }
                >
                  Submitted
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                  ]
                }
              >
                8
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#C7CDD1",
                      "borderRightWidth": 2,
                      "borderTopWidth": 2,
                      "height": 10,
                      "marginLeft": 7,
                      "width": 10,
                    },
                    Object {
                      "transform": Array [
                        Object {
                          "rotate": "45deg",
                        },
                      ],
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </item>
    </list>
    <View
      style={
        Object {
          "backgroundColor": "#2D3B45",
          "bottom": 0,
          "left": 0,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "position": "absolute",
          "right": 0,
          "transform": Array [
            Object {
              "translateY": 100,
            },
          ],
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
      >
        Practice quizzes & surveys do not have detail views.
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`QuizSubmissionList loads while pending 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`QuizSubmissionList loads with a filter type 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              undefined,
            ]
          }
        >
          Graded
        </Text>
      </View>
      <View
        accessibilityLabel="Filter Submissions. (1) selected."
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 15,
            "left": 15,
            "right": 15,
            "top": 15,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 1,
            "opacity": 1,
            "width": "auto",
          }
        }
        testID="submission-list.filter"
      >
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Filter (1)
          </Text>
        </View>
      </View>
    </View>
    <list>
      <item>
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
            testID="submission-1"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel=""
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#F5F5F5",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "http://www.fillmurray.com/200/300",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Bill Murray
                </Text>
                <Text
                  accessibilityLabel="Submitted,"
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#127A1B",
                        },
                      ],
                    ]
                  }
                >
                  Submitted
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                  ]
                }
              >
                8
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#C7CDD1",
                      "borderRightWidth": 2,
                      "borderTopWidth": 2,
                      "height": 10,
                      "marginLeft": 7,
                      "width": 10,
                    },
                    Object {
                      "transform": Array [
                        Object {
                          "rotate": "45deg",
                        },
                      ],
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </item>
    </list>
    <View
      style={
        Object {
          "backgroundColor": "#2D3B45",
          "bottom": 0,
          "left": 0,
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "position": "absolute",
          "right": 0,
          "transform": Array [
            Object {
              "translateY": 100,
            },
          ],
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
      >
        Practice quizzes & surveys do not have detail views.
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
